--- a/Practica0/Practica0/Practica0.vcxproj
+++ b/Practica0/Practica0/Practica0.vcxproj
@@ -73,12 +73,14 @@
   <ItemGroup>
     <ClInclude Include="functions.h" />
     <ClInclude Include="Line.h" />
+    <ClInclude Include="Plane.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Sphere.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Sphere.cpp" />
   </ItemGroup>
