--- a/Practica0/Practica0/Practica0.vcxproj
+++ b/Practica0/Practica0/Practica0.vcxproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <ClInclude Include="functions.h" />
     <ClInclude Include="Line.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Segment.h" />
@@ -82,6 +83,7 @@
   <ItemGroup>
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Segment.cpp" />
