--- a/Practica1/FreeFormDef/FreeFormDef.vcxproj
+++ b/Practica1/FreeFormDef/FreeFormDef.vcxproj
@@ -70,6 +70,7 @@
     <ClCompile Include="Mesh.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="functions.h" />
     <ClInclude Include="Mesh.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
