--- a/Fountain/Fountain/ParticleSystem_JordiSerrano.vcxproj
+++ b/Fountain/Fountain/ParticleSystem_JordiSerrano.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{9021D11D-4A76-44CD-9FBB-2F0A3E2E83CB}</ProjectGuid>
+    <ProjectGuid>{F0716733-CAC2-4F82-AC34-D528466F2527}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Fountain</RootNamespace>
+    <RootNamespace>ParticleSystem_JordiSerrano</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -41,13 +41,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)\deps\include;</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(SolutionDir)\deps\lib;</LibraryPath>
+    <IncludePath>$(Solutiondir)\deps\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(Solutiondir)\deps\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)\deps\include;</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(SolutionDir)\deps\lib;</LibraryPath>
+    <IncludePath>$(Solutiondir)\deps\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(Solutiondir)\deps\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -61,7 +61,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);sdl2.lib;sdl2main.lib;opengl32.lib;glew32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>sdl2.lib;sdl2main.lib;opengl32.lib;glew32.lib;glut32.lib;glut.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -80,7 +80,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);sdl2.lib;sdl2main.lib;opengl32.lib;glew32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>sdl2.lib;sdl2main.lib;opengl32.lib;glew32.lib;glut32.lib;glut.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -90,7 +90,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="GLSLProgram.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="OpenGLBuffers.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Window.cpp" />
