--- a/Fountain/Fountain/Fountain.vcxproj
+++ b/Fountain/Fountain/Fountain.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Segment.cpp" />
@@ -99,6 +100,7 @@
     <ClInclude Include="Cube.h" />
     <ClInclude Include="functions.h" />
     <ClInclude Include="Line.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Segment.h" />
