--- a/Fountain/Fountain/Fountain.vcxproj
+++ b/Fountain/Fountain/Fountain.vcxproj
@@ -84,6 +84,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Corda.cpp" />
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="main.cpp" />
@@ -95,6 +96,7 @@
     <ClCompile Include="Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Corda.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="functions.h" />
     <ClInclude Include="Line.h" />
