--- a/onades/Fountain/Fountain.vcxproj
+++ b/onades/Fountain/Fountain.vcxproj
@@ -95,6 +95,7 @@
     <ClCompile Include="Segment.cpp" />
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="Triangle.cpp" />
+    <ClCompile Include="Wave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cloth.h" />
@@ -108,6 +109,7 @@
     <ClInclude Include="Segment.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="Triangle.h" />
+    <ClInclude Include="Wave.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
